--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,10 @@ path = "src/dasm/main.rs"
 colored = "3.0.0"
 crossterm = "0.29.0"
 raylib = "5.5.1"
+
+[lints.rust]
+unused_parens = "allow"
+
+[lints.clippy]
+type-complexity = "allow"
+too-many-arguments = "allow"
